Added: api wide /callback, and documentation at swagger
